Update toy-360.md front matter
added credit for image

--- a/src/toys/toy-360.md
+++ b/src/toys/toy-360.md
@@ -5,10 +5,13 @@ tags: [toy, stuffed]
 family: 360
 income: 654
 country: Colombia
+Region: The Americas
 video: 
 videoAlt: 
 image: family-360-most-loved-toys.jpg
 imageAlt: stuffed monkey with buttons on it
+credit: Andrea Builes Gomez for Dollar Street 2019
+creditLink: https://www.gapminder.org/dollar-street/photographers/andrea-builes-gomez
 description: The family lives in Colombia. They are 4 adults. Y is 39 years old and she is a saleswoman. Her husband R is also 39 years old and he is an automobile painter. They live with their mother and a son in a 4-bedroom house. 
 family-link: https://www.gapminder.org/dollar-street/families/family-360?media=all&topic=most-loved-toys
 ---
